--- a/cpm.html
+++ b/cpm.html
@@ -33,7 +33,7 @@
     <h1>Hálótervezés - CPM</h1>
     <div class="container unsel">
     <center>
-        <button type="button" class="btn btn-primary"><a href="kezdőoldal.html">Kezdőoldal</a></button>
+        <button type="button" class="btn btn-primary"><a href="index.html">Kezdőoldal</a></button>
         <button type="button" class="btn btn-primary"><a href="bemutatkozás.html">Bemutatkozás</a></button>
         <button type="button" class="btn btn-primary"><a href="cpm.html">CPM</a></button>
         <button type="button" class="btn btn-primary"><a href="mpm.html">MPM</a></button>
