--- a/mpm.html
+++ b/mpm.html
@@ -35,7 +35,7 @@
 <body>
     <div class="container unsel">
         <center>
-            <button type="button" class="btn btn-primary"><a href="kezdőoldal.html">Kezdőoldal</a></button>
+            <button type="button" class="btn btn-primary"><a href="index.html">Kezdőoldal</a></button>
             <button type="button" class="btn btn-primary"><a href="bemutatkozás.html">Bemutatkozás</a></button>
             <button type="button" class="btn btn-primary"><a href="cpm.html">CPM</a></button>
             <button type="button" class="btn btn-primary"><a href="mpm.html">MPM</a></button>
