--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
             color: #0056b3;
             text-align: center;
         }
-        button{
+        button {
             margin: auto;
             display: flex;
         }
-        a{
+        a {
             color: white;
             text-decoration: none;
         }
-        .unsel{
+        .unsel {
             user-select: none;
             -webkit-user-drag: none;
+            text-align: center;
         }
     </style>
 </head>
@@ -35,19 +36,17 @@
     <div class="container unsel">
     <h1>Projektmenedzsment</h1>
     <center>
-    <button type="button" class="btn btn-primary"><a href="index.html">Kezdőoldal</a></button>
-    <button type="button" class="btn btn-primary"><a href="bemutatkozás.html">Bemutatkozás</a></button>
-    <button type="button" class="btn btn-primary"><a href="cpm.html">CPM</a></button>
-    <button type="button" class="btn btn-primary"><a href="mpm.html">MPM</a></button>
-    <button type="button" class="btn btn-primary"><a href="Kockázatelemzés.html">Kockázatelemzés</a></button>
-    <button type="button" class="btn btn-primary"><a href="Kiegyensúlyozás.html">Kiegyensúlyozás</a></button>
-    <button type="button" class="btn btn-primary"><a href="Költségek becslése.html">Költségek becslése</a></button>
-    <button type="button" class="btn btn-primary"><a href="források.html">Források</a></button>
+    <a href="index.html"><button type="button" class="btn btn-primary">Kezdőoldal</button></a>
+    <a href="bemutatkozás.html"><button type="button" class="btn btn-primary">Bemutatkozás</button></a>
+    <a href="cpm.html"><button type="button" class="btn btn-primary">CPM</button></a>
+    <a href="mpm.html"><button type="button" class="btn btn-primary">MPM</button></a>
+    <a href="Kockázatelemzés.html"><button type="button" class="btn btn-primary">Kockázatelemzés</button></a>
+    <a href="Kiegyensúlyozás.html"><button type="button" class="btn btn-primary">Kiegyensúlyozás</button></a>
+    <a href="Költségek becslése.html"><button type="button" class="btn btn-primary">Költségek becslése</button></a>
+    <a href="források.html"><button type="button" class="btn btn-primary">Források</button></a>
+    <a href="Projektdokumentáció.html"><button type="button" class="btn btn-primary">Projektdokumentáció</button></a>
     </center>
-    
-    
-    <center style="font-size: 27px;"><p>Ezen az órán projektfeladatokkal és azoknak a különböző megvalósítási módszereivel szoktunk foglalkozni.</p></center>
-    <br>
+    <center style="font-size: 27px;"><p style="font-family: Georgia, 'Times New Roman', Times, serif;">Ezen az órán projektfeladatokkal és azoknak a különböző megvalósítási módszereivel szoktunk foglalkozni.</p></center>
     <center><img src="images.jpg" alt="Mechwart logó" title="Mechwart logó" style="height: 500px; width: 500px;" class="rounded-circle"></center>
     </div>
 </body>
