--- a/Kockázatelemzés.html
+++ b/Kockázatelemzés.html
@@ -1,11 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kockázatelemzés</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            line-height: 1.6;
+            user-select: none;
+        }
+        h1 {
+            text-align: center;
+            text-decoration: underline;
+            font-size: 40px;
+        }
+        h3 {
+            text-align: center;
+            font-size: 22px;
+            font-weight: normal;
+        }
+        p {
+            font-size: 20px;
+            font-weight: bold;
+        }
+        a {
+            font-size: large;
+            color: white;
+            text-decoration: none;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+        .modszerek, .strategiak {
+            background: #f4f4f4;
+            padding: 15px;
+            border-radius: 5px; 
+            margin-top: 10px;
+            border-color: rgb(0, 0, 0);
+        }
+        button {
+            margin: auto;
+            display: flex;
+        
+        }
+        .modszerek h4, .strategiak h4 {
+            font-size: 22px;
+            text-decoration: underline;
+        }
+        .modszerek p, .strategiak p {
+            font-size: 18px;
+        }
+        .unsel {
+            user-select: none;
+            -webkit-user-drag: none;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Kockázatelemzés</h1>
+    <br>
+    <div class="container unsel">
+    <center>
+        <a href="index.html"><button type="button" class="btn btn-primary">Kezdőoldal</button></a>
+        <a href="bemutatkozás.html"><button type="button" class="btn btn-primary">Bemutatkozás</button></a>
+        <a href="cpm.html"><button type="button" class="btn btn-primary">CPM</button></a>
+        <a href="mpm.html"><button type="button" class="btn btn-primary">MPM</button></a>
+        <a href="Kockázatelemzés.html"><button type="button" class="btn btn-primary">Kockázatelemzés</button></a>
+        <a href="Kiegyensúlyozás.html"><button type="button" class="btn btn-primary">Kiegyensúlyozás</button></a>
+        <a href="Költségek becslése.html"><button type="button" class="btn btn-primary">Költségek becslése</button></a>
+        <a href="források.html"><button type="button" class="btn btn-primary">Források</button></a>
+        <a href="Projektdokumentáció.html"><button type="button" class="btn btn-primary">Projektdokumentáció</button></a>
+    </center>
+    </div>
+    <hr align="center" style="height: 5px; width: 100%;">
+    <h3>A kockázatelemzés célja a projekt során fellépő bizonytalanságok feltárása, amelyek negatív vagy pozitív hatásúak lehetnek. A kockázatokat a valószínűségük és hatásuk alapján értékeljük, és a projektmenedzsment során ezeket folyamatosan kezelni kell.</h3>
+    <p>A kockázatokat különböző tényezők alapján csoportosítjuk.</p>
+    <ul>
+        <li>
+            <b>A kockázatok hatásának elemzése:</b>
+            <br>
+            <u>A cél a különböző kockázati tényezők hatásának számszerűsítése és a vizsgálatba bevont tényezők grafikus ábrázolása. A projektvezető mérlegeli, hogy mely kockázatokkal érdemes foglalkozni, figyelembe véve azok valószínűségét és hatását.</u>
+        </li>
+    </ul>
+    <div class="modszerek">
+        <h4>Kockázatelemzési módszerek</h4>
+        <p><b>Érzékenységi vizsgálat:</b> A kockázati tényezők egyes változásainak hatását vizsgáljuk, figyelmen kívül hagyva az összefüggéseket. Kiemeli azokat a tényezőket, amelyek leginkább befolyásolják a projektet, de nem veszi figyelembe a kockázatok összefüggéseit.</p>
+        <p><b>Valószínűségi elemzés:</b> A kockázati tényezők valószínűségi eloszlását használja a kockázatok összefüggéseinek figyelembevételével. A várható értékek kiszámításával történik a kockázatok hatásának meghatározása.</p>
+    </div>
+    <div class="strategiak">
+        <h4>Kockázatkezelési stratégiák</h4>
+        <p><b>Elfogadás:</b> Tudomásul vesszük a kockázatot, de nem teszünk ellene semmit.</p>
+        <p><b>Elkerülés:</b> A kockázatot úgy próbáljuk csökkenteni, hogy elkerüljük a kérdéses részét a projektnek.</p>
+        <p><b>Szabályozás:</b> Tartaléktervet készítünk a nem várt hatások kezelésére.</p>
+        <p><b>Átruházás:</b> A kockázatot biztosítással vagy szakértő alkalmazásával másra átruházzuk.</p>
+        <p><b>Csökkentés:</b> A kockázatot különböző intézkedésekkel próbáljuk mérsékelni.</p>
+    </div>
+    <p>A kockázatkezelés célja, hogy elősegítse a projekt hatékony végrehajtását és biztosítsa a projekt gazdasági-pénzügyi értékelésének reális alapját.</p>
 </body>
 </html>
