--- a/bemutatkozás.html
+++ b/bemutatkozás.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kezdőoldal</title>
+    <title>Bemutatkozás</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    >
     <style>
         body {
             font-family: 'Times New Roman', Times, serif;
@@ -17,17 +16,18 @@
             color: #0056b3;
             text-align: center;
         }
-        button{
+        button {
             margin: auto;
             display: flex;
         }
-        a{
+        a {
             color: white;
             text-decoration: none;
         }
-        .unsel{
+        .unsel {
             user-select: none;
             -webkit-user-drag: none;
+            text-align: center;
         }
     </style>
 </head>
@@ -35,22 +35,19 @@
     <div class="container unsel">
     <h1>Projektmenedzsment</h1>
     <center>
-    <button type="button" class="btn btn-primary"><a href="index.html">Kezdőoldal</a></button>
-    <button type="button" class="btn btn-primary"><a href="bemutatkozás.html">Bemutatkozás</a></button>
-    <button type="button" class="btn btn-primary"><a href="cpm.html">CPM</a></button>
-    <button type="button" class="btn btn-primary"><a href="mpm.html">MPM</a></button>
-    <button type="button" class="btn btn-primary"><a href="Kockázatelemzés.html">Kockázatelemzés</a></button>
-    <button type="button" class="btn btn-primary"><a href="Kiegyensúlyozás.html">Kiegyensúlyozás</a></button>
-    <button type="button" class="btn btn-primary"><a href="Költségek becslése.html">Költségek becslése</a></button>
-    <button type="button" class="btn btn-primary"><a href="források.html">Források</a></button>
+        <a href="index.html"><button type="button" class="btn btn-primary">Kezdőoldal</button></a>
+        <a href="bemutatkozás.html"><button type="button" class="btn btn-primary">Bemutatkozás</button></a>
+        <a href="cpm.html"><button type="button" class="btn btn-primary">CPM</button></a>
+        <a href="mpm.html"><button type="button" class="btn btn-primary">MPM</button></a>
+        <a href="Kockázatelemzés.html"><button type="button" class="btn btn-primary">Kockázatelemzés</button></a>
+        <a href="Kiegyensúlyozás.html"><button type="button" class="btn btn-primary">Kiegyensúlyozás</button></a>
+        <a href="Költségek becslése.html"><button type="button" class="btn btn-primary">Költségek becslése</button></a>
+        <a href="források.html"><button type="button" class="btn btn-primary">Források</button></a>
+        <a href="Projektdokumentáció.html"><button type="button" class="btn btn-primary">Projektdokumentáció</button></a>
     </center>
-    
-    <h2 style="float: left;">Csapat tagjai: Nagy Máté, Győri Tamás, Szabó Patrik Zsolt</h2>
-    <br>
-    <br>
-    <h2>Erre az órára: IKT projektmunka</h2>
-    <center><img src="images.jpg" alt="Mechwart logó" title="Mechwart logó" style="height: 500px; width: 500px;" class="rounded-circle"></center>
-
+    <h2 style="text-align: center;">Csapat tagjai: Nagy Máté, Győri Tamás, Szabó Patrik Zsolt</h2>
+    <h2>Erre az órára készült: IKT. projektmunka</h2>
+    <img src="images.jpg" alt="Mechwart logó" title="Mechwart logó" style="height: 500px; width: 500px;" class="rounded-circle">
    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
