--- a/Kiegyensúlyozás.html
+++ b/Kiegyensúlyozás.html
@@ -136,6 +136,8 @@
         <br>
         A vállalati döntések lassíthatják a projekt haladását.</p>
       </ol>
-      
+<h2>Összegzés</h2>
+<p>A kiegyensúlyozás elengedhetetlen a projektek sikeréhez, hiszen biztosítja az idő, költségek és minőség megfelelő egyensúlyát. A projektszintű megoldások hatékonyabbá tehetik a munkát, míg az üzleti és vállalati szintű beavatkozások segíthetnek a hosszú távú fenntarthatóság biztosításában. A megfelelő módszerek kiválasztásával minimalizálhatók a kockázatok, miközben a projekt céljai teljesülnek.</p>
+
 </body>
 </html>
