--- a/Költségek becslése.html
+++ b/Költségek becslése.html
@@ -178,6 +178,6 @@ A leggyakrabban alkalmazott becslési módszerek:
     <br>
     Megbízhatósága a rendelkezésre álló részletes információktól függ.</p>
 </ol>
-
+<p>A megfelelő becslési módszer kiválasztása a projekt jellegétől, a rendelkezésre álló adatoktól és az időkorláttól függ. A pontos és megbízható költségbecslés hozzájárul a sikeres projektmegvalósításhoz, minimalizálva a kockázatokat és a váratlan költségtúllépéseket. </p>
 </body>
 </html>
