--- a/források.html
+++ b/források.html
@@ -81,5 +81,8 @@
     </div>
     <hr align="center" style="height: 5px; width: 100%;">
     <center><a href="https://www.itstudy.hu/sites/default/files/projektmenedzsment-es-ms-project-2003-2007-letoltheto-konyv.pdf">https://www.itstudy.hu/sites/default/files/projektmenedzsment-es-ms-project-2003-2007-letoltheto-konyv.pdf</a></center>
+    <center><a href="https://pea.lib.pte.hu/bitstream/handle/pea/23663/jarjabka-akos-projektmenedzsment-ismeretek-pte-ktk-pecs-2020.pdf">https://pea.lib.pte.hu/bitstream/handle/pea/23663/jarjabka-akos-projektmenedzsment-ismeretek-pte-ktk-pecs-2020.pdf</a></center>
+    <center><a href="https://slideplayer.hu/slide/2933267/">https://slideplayer.hu/slide/2933267/</a></center>
+    
 </body>
 </html>
